# Raytracer_OLC_PGE

./: CMakeLists.txt  README.md  rtconfig.json
scenes/: testScene1.json
src/: aabb.cpp  aabb.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  hitrecord.hpp  hittable.hpp  hittablelist.cpp  interval.cpp  interval.hpp  main.cpp  mainscreen.cpp  mainscreen.hpp  mat3.cpp  mat3.hpp  material.cpp  material.hpp  ray.hpp  sceneloading.cpp  sceneloading.hpp  sphere.cpp  triangle.cpp  util.cpp  util.hpp  vec3.cpp  vec3.hpp
src/olc/: CMakeLists.txt  olcPGE.hpp
src/threadpool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.hpp
